k8s/applications/network/omada/patch-scale-zero.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: omada-controller
spec:
  replicas: 0
