k8s/applications/network/omada/patch-service-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: omada-controller
spec:
  externalTrafficPolicy: Local
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: manage-https
