k8s/applications/network/omada/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: omada-tlsroute
  namespace: omada
spec:
  parentRefs:
    - name: tls-passthrough
      namespace: gateway
  hostnames:
    - "omada.k8s.eudald.gr"
  rules:
    - backendRefs:
        - name: omada-controller
          port: 8043
